# dirtycow

./: CMakeLists.txt  README.md  dirtycow.c  dirtycow.h  exploit.c  exploit.h  unit.c  unit.h  vdso_backdoor.c  vdso_backdoor.h
backdoor/: CMakeLists.txt  backdoor.c  standalone_elf64.lds  x86_64_linux.cmake
backdoor/libc/: errno.c  libc.cmake  signal.c  signal.h  string.c
backdoor/linux_syscalls/: SyscallNumber.h  fcntl.c  libc_warrper.c  linux.cmake  signal.c  socket.c  stat.c  syscall.c  syscall.h  unistd.c
backdoor/script/: file_strip.py
script/: file_strip.py
